--- a/less/invest.less
+++ b/less/invest.less
@@ -69,6 +69,7 @@ section{
 							top: 0px;
 							display:table;
 							min-width: 36px;
+							width: 92%;
 						    .right{
 								position:absolute;
 								left:0px;
