--- a/less/trackperformance.less
+++ b/less/trackperformance.less
@@ -313,11 +313,14 @@ section{
 					}
 				}
 				.trackPerformanceLegends{
-					float: left;
-					padding: 0;
-					margin-top: 6%;
+					    float: none;
+					    padding: 0;
+					    margin-top: 6%;
+					    width: 59%;
+					    margin: 2% auto;
 					@media @below768{
 						margin-top: 6%;
+						width: 90%;
 					}
 					@media @between1024-768{
 						margin-top:6%;
@@ -329,7 +332,7 @@ section{
 					}
 					.legend-cover{
 						float: left;
-						width: 34%;
+						width: 50%;
 						@media @below600{
 							width: 60%;
 						}
@@ -343,7 +346,7 @@ section{
 							
 							display:table;
 							float:left;
-							
+							width: 100%;
 						    .right{
 								position:absolute;
 								left:0px;
