--- a/less/swiper.less
+++ b/less/swiper.less
@@ -423,8 +423,8 @@
         }
         &.hasCheckbox{
           .checkbox-cover{
-              padding-top:7%;
-              padding-bottom:3%;
+              padding-top:2px;
+             
               label{
                 .GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@blackapprox,normal);
                 .PIXEL2EM(24);
@@ -743,7 +743,7 @@
           margin-top:0px;
         }  
         &.hasCheckbox{
-          min-height: 580px;
+          /*min-height: 580px;*/
         }
       }
       .fin-btn-group-wrapper{
